public/css/style.css
/* ... */
    
    #nav-settings,
    #nav-logout,
    #nav-login {
        position:absolute;
        top:100%;
        margin-top:-80px;
        left:20px;
        width:55px;
        height:55px;
        -moz-border-radius:2px;
        -webkit-border-radius:2px;
        -khtml-border-radius:2px;
        border-radius:2px;
        cursor:pointer;
    }
    
    #nav-settings.nologin {
        width:140px;
    }
    
    #nav-settings {
        background:url(images/nav-sources.png) no-repeat center center #272325;
    }
        
    #nav-logout {
        background:url(images/nav-logout.png) no-repeat center center #272325;
        left:85px;
    }    
    
    #nav-login {
        background:url(images/nav-login.png) no-repeat center center #272325;
        width:140px;
    }
    
    #nav-mobile {
        display:none;
    }
    
    #nav-copyright {
        position:absolute;
        top:100%;
        margin-top:-25px;
        margin-left:20px;
        font-size:0.6em;
        color:#555;
        text-decoration:none;
    }
    

/* search */

#search {
    z-index:9;
    position:absolute;
    left:-118px;
    top:25px;
    width:330px;
    padding:5px;
    background:rgba(61, 109, 105, 0.4);
    
    -webkit-border-top-right-radius: 4px;
    -webkit-border-bottom-right-radius: 4px;
    -moz-border-radius-topright: 4px;
    -moz-border-radius-bottomright: 4px;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    
    transition: left 0.5s ease-in-out ;
    -webkit-transition: left 0.5s ease-in-out ;
    -o-transition: left 0.5s ease-in-out ;
    -moz-transition: left 0.5s ease-in-out ;
}
    
    #search.active {
        left:185px;
    }
    
    #search-term {
        width:250px;
        margin-left:10px;
    }
    
    #search-shownav {
        display:none;
    }

    #search-button,
    #search-remove {
        position:absolute;
        width:30px;
        height:20px;
        top:11px;
        left:280px;
        cursor:pointer;
    }
    
    #search-remove {
        background:url(images/remove.png) no-repeat center center;
    }
    
    #search-button {
        background:url(images/search.png) no-repeat center center;
        left:305px;
    }
    
    
#search-list  {
    display:none;
    margin-left:220px;
    padding-top:10px;
    height:15px;
}
    #search-list  li {
        float:left;
        margin-left:10px;
        color:#ffffff;
        padding-left:5px;
        padding-right:15px;
        font-size:0.85em;
        background: url(images/remove-small.png) no-repeat right center #3d6d69;
        border-right:6px solid #3d6d69;
        -webkit-border-top-right-radius: 4px;
        -webkit-border-bottom-right-radius: 4px;
        -moz-border-radius-topright: 4px;
        -moz-border-radius-bottomright: 4px;
        border-top-right-radius: 4px;
        border-bottom-right-radius: 4px;
        cursor:pointer;
    }
    
/* content */

#content {
    margin-left:220px;
    padding-top:20px;
    padding-bottom:20px;
}

    #content .stream-empty {
        text-align:center;
    }

    #content.loading {
        background:url(images/ajax-loader-big.gif) center center no-repeat;
        min-height:90%
    }

.entry ,
.source {
    margin:1px 50px 3px 5px; 
    padding:5px; 
    -moz-border-radius:4px;
    -webkit-border-radius:4px;
    -khtml-border-radius:4px;
    border-radius:4px;
    background:rgba(255, 255, 255, 0.4);
    position:relative;
    font-weight:normal;
    font-size:0.9em;
    border: 1px solid rgba(255, 255, 255, 0);
}

    .entry.selected.unread,
    .entry.unread {
        border-left:3px solid #5f9490;
    }

    .entry.selected {
        border:1px solid #ccc;
    }

    .entry .found {
        color:#fff;
        background:rgba(61, 109, 105, 0.4);
    }

    .entry-icon,
    .entry-title,
    .entry-tags,
    .entry-tags-tag {
        display:inline;
        font-weight:normal;
        margin-right:5px;
        cursor:pointer;
    }

    .entry-title {
        cursor:pointer;
        color:#999999;
        padding-top:7px;
        padding-bottom:7px;
    }
    
        .entry.unread  .entry-title {
            color:#333333;
        }
    
    .entry-tags-tag {
        -moz-border-radius:4px;
        -webkit-border-radius:4px;
        -khtml-border-radius:4px;
        border-radius:4px;
        padding:2px;
        font-size:0.8em;
        white-space:nowrap;
    }
    
    .entry-content {
        display:none;
        -moz-column-count: 3;
        -moz-column-gap: 2em;
        -moz-column-rule: 1px solid rgba(204, 204, 204, 0.4);
        -webkit-column-count: 3;
        -webkit-column-gap: 2em;
        -webkit-column-rule: 1px solid rgba(204, 204, 204, 0.4);
        column-count: 3;
        column-gap: 2em;
        column-rule: 1px solid rgba(204, 204, 204, 0.4);
        font-size:0.95em;
        margin-top:20px;
        line-height: 1.7em;
        overflow: hidden;
    }
    
        .entry-content a {
            color:#3d6d69;
        }
        
        .entry-content img {
            max-width:99%;
            display: block;
            margin: 0 10px 5px 0;
        }
        
        .entry-content p {
            margin-bottom:0.6em;
        }
        
        .entry-content ol li {
            list-style:decimal inside;
        }

        .entry-content li {
            margin:0.3em;
            list-style:disc inside;
        }

        .entry-content blockquote {
            padding:1px 10px;
            border-left: 2px solid #eaeaea;
            font-style: italic;
        }

        .entry-content.entry-content-short {
            -moz-column-count: 1;
            -webkit-column-count: 1;
            column-count: 1;
            max-width: 750px;
        }
        
        .entry-content pre,
        .entry-content blockquote {
            overflow-x: auto;
        }
/* ... */

